--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,100;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap');
+ 
+* {
+  font-family: Roboto;
+}
+
 html,
 body,
 #react-root {
@@ -5,7 +11,6 @@ body,
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
   background-color: #fffbef;
 
